--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_author: paligopal
 site_url: https://paligopal.github.io/reasoning_by_me
 
 nav:
-  - Readings: calendar.md
+  - Calendar: calendar.md
 
 theme:
   name: material
